objects/LLC_BI__DocTab__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__columns__c</fullName>
        <description>This field defines which columns are shown in classic Document Manager. An admin should specify, at a minimum, the Name column. This field is a semi-colon delimited list.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>exists;name;docType;firstReview;exceptionDate;status;comment;owner</inlineHelpText>
        <label>columns</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__defaultOwner__c</fullName>
        <description>This field allows the user to set a default owner for all documents within this tab in classic Document Manager. This field is optional.</description>
        <label>defaultOwner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it for the tab to appear in classic Document Manager. This field associates a tab with a specific DocManager record.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>DocTabs</relationshipLabel>
        <relationshipName>DocTabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>This field is optional and allows the user to define the order in which tabs appear (from left to right) in classic Document Manager.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>sortOrder</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__status__c</fullName>
        <description>This field is not currently used.</description>
        <label>status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Closer Updated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>In File</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Recorded Doc/Policy</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocTab</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocTabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>